# ImplementationProject

./: .gitignore  .replit  INTEGRATION_GUIDE.md  package-lock.json  package.json  pyproject.toml  replit.md
attached_assets/: Pasted--Backend-Django-4-x-Django-REST-Framework-Python-3-10--_1764922242470.txt  Pasted--Backend-Django-4-x-Django-REST-Framework-Python-3-10--_1764930578158.txt  Pasted--Backend-Django-4-x-Django-REST-Framework-Python-3-10--_1764935352718.txt
backend/config/: settings.py  urls.py
backend/document_builder/: admin.py  apps.py  models.py  serializers.py  urls.py  utils.py  views.py
backend/document_builder/migrations/: 0001_initial.py
frontend/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
frontend/src/: App.tsx  index.css
frontend/src/api/: documentBuilderApi.ts
frontend/src/components/document-builder/: DocumentCanvas.tsx  InspectorPanel.tsx  SidebarBlocks.tsx  SidebarFiles.tsx  Toolbar.tsx  types.ts
frontend/src/components/ui/: button.tsx  card.tsx  dialog.tsx  dropdown-menu.tsx  input.tsx  label.tsx  popover.tsx  scroll-area.tsx  select.tsx  separator.tsx  slider.tsx  switch.tsx  tabs.tsx  textarea.tsx  toggle-group.tsx  toggle.tsx  tooltip.tsx
frontend/src/pages/: DocumentBuilderPage.tsx
